fixed a bug of not showing an image

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@
             font-size: 3rem;
         }
         #first {
-            background: url('../Assets/Screenshot 2025-10-22 000513.png') no-repeat center center/cover;
+            background: url('Assets/Screenshot 2025-10-22 000513.png') no-repeat center center/cover;
         }
 
         #second {
